[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/CardInfoPanel.gd" type="Script" id=1]

[node name="CardInfoPanel" type="Panel"]
anchor_right = 0.25
anchor_bottom = 0.5
margin_right = 300.0
margin_bottom = 400.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CardImage" type="TextureRect" parent="VBoxContainer"]
margin_right = 556.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
expand = true

[node name="LabelName" type="Label" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 556.0
margin_bottom = 218.0
text = "Card Name"

[node name="LabelStats" type="Label" parent="VBoxContainer"]
margin_top = 222.0
margin_right = 556.0
margin_bottom = 236.0
text = "ATK/DEF"

[node name="RichTextDescription" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 240.0
margin_right = 556.0
margin_bottom = 340.0
rect_min_size = Vector2( 200, 100 )
